Archive2/7e/453fef1aa871ba/output
main.cpp:12:14: warning: unused parameter 'a' [-Wunused-parameter]
A f(const A &a, A b, A *c) { return *c; }
             ^
main.cpp:12:19: warning: unused parameter 'b' [-Wunused-parameter]
A f(const A &a, A b, A *c) { return *c; }
                  ^
main.cpp:14:16: error: taking the address of a temporary object of type 'A' [-Waddress-of-temporary]
    f(1, A(2), &A(3));
               ^~~~~
2 warnings and 1 error generated.
